# LLM-Project

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  download_models.py  main.ipynb  main.py  pyproject.toml  quantize_models.py  temp_info.md  test_mlx.py  upload_models.py
.plotvenv/: pyvenv.cfg
Documentation/: LLM Project.docx  temp_info.md
Report/: llama_comparison.tex  references.bib  template.tex
backend/: config.py  evaluate.py  llama_server.py
benchmarks/: agent_tasks_data.py  ppl_sample.txt  run_agent.sh  test_agent.py  test_lm_eval.py  test_longbenchv2.py  test_ruler.py
results_cuda/: longbench.csv  longbench_examples.csv  longbench_summary.json
results_cuda/old/: longbench_summary.json
results_cuda/old/first run/: longbench_examples.csv
results_cuda/old/second run (100 samples)/: longbench.csv
results_cuda/only q8_0/: longbench.csv  longbench_examples.csv  longbench_summary.json
results_ruler/: ruler_summary.json
scripts/: build_cuda.sh  build_llamacpp_cuda.sh  plot_longbench.py  setup_llamacpp.sh
tools/: download_models.py  quantize_models.py  upload_models.py
