[project]
name = "llm-engineering-project"
version = "0.1.0"
description = "Comparison of quantization methods and TurboQuant KV Cache compression across LLMs."
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.44.0",
    "datasets>=2.20.0",
    "numpy>=1.26.0",
    "huggingface_hub>=0.24.0",
    "accelerate>=0.33.0",
    "requests>=2.31.0",
    "python-dotenv==1.2.2",
    "dotenv==0.9.9",
    "sentencepiece>=0.2.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "mlx-vlm",
    "mlx",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "black>=24.0.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
